@@ -4,7 +4,7 @@ Description: fKidd is a Free Multi-Purpose WordPress Theme. Features: Fully Resp
 Theme URI: https://tishonator.com/product/fkidd
 Author: tishonator
 Author URI: https://tishonator.com
-Version: 1.8.5
+Version: 1.8.6
 Text Domain: fkidd
 Tags: education, blog, news, two-columns, right-sidebar, custom-logo, custom-background, custom-header, custom-menu, featured-images, post-formats, threaded-comments, sticky-post, theme-options, footer-widgets, translation-ready, full-width-template, front-page-post-form
 License: GNU General Public License v2 or later
@@ -52,6 +52,8 @@ p {
 img {
 	border:0;
 	outline:0;
+	max-width:100%;
+	height:auto;
 }
 
 #main-content-wrapper img,
